--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ Save/SlamazonMule.key
 Save/SlamazonMule.ma0
 
 Save/SlamazonMule.map
+
+Save/JewellMule.d2s
+
+Save/JewellMule.key
+
+Save/JewellMule.ma0
+
+Save/JewellMule.map
